# Tarot

./: .gitignore  CMakeLists.txt  Makefile  README.md  concat_src.sh  grammer.md  hello.k  hello.t  lcc  out.cpp
.github/workflows/: cpp-ci.yml
include/libtarot/: Codegen.h  Conainer.h  ControlFlow.h  Declaration.h  Evaluate.h  Indent.h  Lexer.h  Parser.h  Report.h  Resolved.h  Sema.h  Source.h  Statement.h  Token.h  TokenType.h  Type.h  Utils.h
include/libtrt/: Codegen.h  Declaration.h  Indent.h  Lexer.h  Sema.h  Type.h
includes/: Codegen.h  Declaration.h  Parser.h  Resolved.h  Sema.h  Statement.h  Token.h  TokenType.h
src/: CMakeLists.txt  Codegen.cpp  ControlFlow.cpp  Dump.cpp  Evaluate.cpp  Indent.cpp  Lang.cpp  Lexer.cpp  Parser.cpp  Report.cpp  Resolved.cpp  Sema.cpp  Statement.cpp  Utils.cpp  tarot.cpp
test/: CMakeLists.txt  hello.t  test_codegen.cpp  test_constexpr.cpp  test_control_flow.cpp  test_helper.cpp  test_lexer.cpp  test_operators.cpp  test_parser.cpp  test_sema.cpp  test_variables.cpp
test/example/: assoc_left.t  associativity.t  comparison.t  const_call_chain.t  const_in_cond.t  constexpr_in_expr.t  custom_type.t  else_if_chain.t  empty_return.t  expr_var.t  function_call.t  group.t  if_else.t  invalid_main.t  invalid_main_return.t  invalid_param.t  invalid_println.t  invalid_return.t  invalid_syntax.t  logical.t  main_function.t  missing_return.t  multiple_functions.t  multiple_statements.t  multiple_vars.t  nested.t  nested_calls.t  nested_ops.t  params_function.t  prec.t  precedence.t  println_call.t  reassign.t  redeclare.t  return_literal.t  simple_add.t  simple_constexpr.t  simple_if.t  simple_var.t  unary.t  (+4 more)
test/include/: test_helper.h
tools/: CMakeLists.txt  tarot.cpp
